--- a/bin/TaskExecuter/ChromeExtension/manifest.json
+++ b/bin/TaskExecuter/ChromeExtension/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Task Executer 2",
+  "name": "Task Executer",
   "description": "Executing predefined local programs",
-  "version": "0.1",
+  "version": "1.0",
   "permissions": ["tabs", "activeTab"],
   "background": {
     "persistent": false,
@@ -12,6 +12,6 @@
   },
   "manifest_version": 2,
   "icons": {
-	"128": "icon-128.png"
+	"128": "taskexecuter.png"
   }
 }
