--- a/bin/TaskExecuter/ChromeExtension/manifest.json
+++ b/bin/TaskExecuter/ChromeExtension/manifest.json
@@ -2,16 +2,21 @@
   "name": "Task Executer",
   "description": "Executing predefined local programs",
   "version": "1.0",
-  "permissions": ["tabs", "activeTab"],
+  "permissions": [
+    "tabs",
+    "activeTab"
+  ],
   "background": {
     "persistent": false,
-    "scripts": ["background.js"]
+    "scripts": [
+      "background.js"
+    ]
   },
   "browser_action": {
     "default_title": "Download Youtube audio"
   },
   "manifest_version": 2,
   "icons": {
-	"128": "taskexecuter.png"
+    "128": "taskexecuter.png"
   }
 }
