updated task executer chrome extensions

--- a/bin/TaskExecuter/ChromeExtension/manifest.json
+++ b/bin/TaskExecuter/ChromeExtension/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Task Executer",
+  "name": "Task Executer MP3",
   "description": "Executing predefined local programs",
   "version": "1.0",
   "permissions": [
