--- a/bin/TaskExecuter/ChromeExtension2/manifest.json
+++ b/bin/TaskExecuter/ChromeExtension2/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Task Executer 2",
+  "name": "Task Executer Complete",
   "description": "Executing predefined local programs",
   "version": "2.0",
   "permissions": [
